cmake_minimum_required(VERSION 3.1)

project(algo)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#include_directories(${CMAKE_SOURCE_DIR}/include)

add_subdirectory(practice)
#add_subdirectory(test)
