add_subdirectory(projecteuler)

add_subdirectory(101hack26)

add_subdirectory(w15)
add_subdirectory(w16)
add_subdirectory(w17)

#add_subdirectory(hourrank-1)

#add_subdirectory(epiccode)
add_subdirectory(infinitum12)
add_subdirectory(countercode)
add_subdirectory(codestorm)

add_subdirectory(2014-icpc-southeastern-europe)
add_subdirectory(2014-icpc-north-central-regional-north-america)
add_subdirectory(2014-icpc-mid-central-usa-regional)
add_subdirectory(round-1-acm-icpc-warmup-2015)

add_subdirectory(code-cpp-september-2015)

add_subdirectory(booking-hackathon)
add_subdirectory(godaddy-hackathon)