add_subdirectory(2014-icpc-central-europe-regional)
add_subdirectory(2014-icpc-mid-central-usa-regional)
add_subdirectory(2014-icpc-north-central-regional-north-america)
add_subdirectory(2014-icpc-southeastern-europe)
add_subdirectory(round-1-acm-icpc-warmup-2015)
add_subdirectory(round-2-acm-icpc-warmup-2015)
